<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ericlaroche.myapplication.DisplayMessageActivity">

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="3dp"
        android:text="@string/fps_number_or_oid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="78dp"
        android:layout_height="29dp"
        android:layout_marginLeft="66dp"
        android:layout_marginRight="8dp"
        android:text="@string/fullname"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textViewID"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="176dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="92dp"
        android:layout_marginTop="8dp"
        android:onClick="multiSelectSearch"
        android:text="@string/change_multiple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="424dp"
        android:layout_marginTop="32dp"
        android:scrollbars="none"
        android:background="@drawable/border"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TableLayout
            android:id="@+id/maintable"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="false"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_height="1px"
                android:background="#BDBDBD">

            </TableRow>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>