<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ericlaroche.myapplication.Multichange">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="353dp"
        android:layout_height="21dp"
        android:layout_marginBottom="263dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/change_location_to"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="270dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:layout_conversion_absoluteHeight="44dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="287dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:elevation="24dp"
        android:lineSpacingExtra="8sp"
        android:onClick="updateAllLocations"
        android:text="@string/save"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="144dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="332dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="321dp"
        android:layout_height="122dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/inOut_layout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:layout_editor_absoluteX="60dp">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            ></TableLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/inOut_layout"
        android:layout_width="356dp"
        android:layout_height="249dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentBottom="true"
        android:isScrollContainer="false"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/in_out_of_institution"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Direction"
                android:textAlignment="viewStart" />

            <Spinner
                android:id="@+id/spinner_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.062"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.245" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="372dp"
                android:layout_height="wrap_content"
                android:text="@string/commentstitle"
                android:textAlignment="textStart" />

            <ScrollView
                android:id="@+id/Scrollview12"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                android:layout_weight="3.75">

                <EditText
                    android:id="@+id/comment_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="left"
                    android:inputType="textMultiLine"
                    android:minLines="2" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.45" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reasontitle"
                android:textAlignment="viewStart" />

            <Spinner
                android:id="@+id/spinner_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.937"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.245" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:layout_weight="0.45" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:onClick="writeInOutTable"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.982" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
